--- a/client/package.json
+++ b/client/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "client",
+  "name": "mern",
   "version": "0.1.0",
+  "description": "Mern Demo",
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "@babel/runtime": "7.0.0-beta.46",
+    "animate.css": "^3.7.2",
     "axios": "^0.18.0",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^4.2.1",
+    "react": "^16.6.3",
+    "react-bootstrap": "^1.0.0-beta.5",
+    "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -16,13 +22,16 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": {
+    "development": [
+      "last 2 chrome versions",
+      "last 2 firefox versions",
+      "last 2 edge versions"
+    ],
+    "production": [
+      ">0.25%",
+      "not op_mini all",
+      "ie 11"
+    ]
+  }
 }
