--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "google-books-react-search",
+  "name": "mern",
   "version": "1.0.0",
-  "description": "Google Books React Search",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
@@ -13,7 +13,7 @@
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
-  "author": "Perry Choy",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^4.1.0",
@@ -21,9 +21,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "if-env": "^1.0.4",
-    "mongoose": "^5.4.15"
+    "express": "^4.16.3",
+    "mongoose": "^5.3.16",
+    "if-env": "^1.0.4"
   }
 }
